[tool.poetry]
name = "codecrafters-redis-python"
version = "0.1.0"
description = ""
authors = ["Karthik Jagadeesan <insufferablejake@gmail.com>"]
readme = "README.md"
packages = [{include = "codecrafters_redis_python"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
